--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,11 @@ description = "Spock Framework"
 
 ext {
   libs = [
-    ant: "org.apache.ant:ant:1.8.4", // use same version as Groovy 2.0
-    asm: "org.ow2.asm:asm:4.0", // use same version as Groovy 2.0
+    ant: "org.apache.ant:ant:1.9.2", // use same version as Groovy 2.3
+    asm: "org.ow2.asm:asm:5.0", // use same version as Groovy 2.3
     cglib: "cglib:cglib-nodep:2.2.2",
     easymock: "org.easymock:easymock:3.0",
-    groovy: "org.codehaus.groovy:groovy-all:2.0.6",
+    groovy: "org.codehaus.groovy:groovy-all:2.3.0-SNAPSHOT",
     h2database: "com.h2database:h2:1.3.164",
     jmock: "org.jmock:jmock:2.5.1",
     jmock_junit4: "org.jmock:jmock-junit4:2.5.1",
@@ -33,7 +33,7 @@ ext {
 
 allprojects {  
   ext.baseVersion = "1.0"
-  ext.groovyVersion = "2.0"
+  ext.groovyVersion = "2.3"
   ext.snapshotVersion = true
   
   group = "org.spockframework"
@@ -53,7 +53,7 @@ subprojects {
 
   repositories {
     mavenCentral()
-    maven { url "http://snapshots.repository.codehaus.org" }
+    maven { url "https://oss.jfrog.org/oss-snapshot-local/" }
   }
 
   configurations {
