turn off doclint for java8

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,12 @@ allprojects {
   ext.groovyLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : "")
   
   apply from: script("common")
+  
+  if (System.getProperty("java.version").startsWith("1.8")) {
+    tasks.withType(Javadoc) {
+      options.addStringOption('Xdoclint:none', '-quiet')
+    }
+  }
 }
 
 apply from: script("ide")
