--- a/build.gradle
+++ b/build.gradle
@@ -139,8 +139,8 @@ def configureJavadoc(task) {
     include "org/spockframework/mock/*"
     configure(options) {
       links "http://download.oracle.com/javase/1.5.0/docs/api/"
-      links "http://groovy.codehaus.org/gapi"
-      links "http://junit-team.github.com/junit/javadoc/4.10" // missing for 4.11
+      links "http://groovy.codehaus.org/gapi/"
+      links "http://junit-team.github.io/junit/javadoc/4.11/"
       links "http://hamcrest.org/JavaHamcrest/javadoc/1.3/"
     }
   }
