--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,11 @@ description = "Spock Framework"
 
 ext {
   libs = [
-    ant: "org.apache.ant:ant:1.9.2", // use same version as Groovy 2.3
-    asm: "org.ow2.asm:asm:5.0.1", // use same version as Groovy 2.3
+    ant: "org.apache.ant:ant:1.9.3", // use same version as Groovy 2.3
+    asm: "org.ow2.asm:asm:5.0.3",
     cglib: "cglib:cglib-nodep:3.1",
     easymock: "org.easymock:easymock:3.2",
-    groovy: "org.codehaus.groovy:groovy-all:2.3.3",
+    groovy: "org.codehaus.groovy:groovy-all:2.3.6",
     h2database: "com.h2database:h2:1.3.174",
     jmock: "org.jmock:jmock:2.6.0",
     jmock_junit4: "org.jmock:jmock-junit4:2.6.0",
