--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,10 @@
 install:
   - cinst jdk8
+
+environment:
+  JAVA_HOME: C:\Program Files\Java\jdk1.8.0_20
   
-#shallow_clone: true
+shallow_clone: true
 
 build_script:
   - gradlew build
