--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,8 @@
 install:
-  - cinst jdk8
+  - cinst java.jdk
 
-environment:
-  JAVA_HOME: C:\Program Files\Java\jdk1.8.0_20
+#environment:
+#  JAVA_HOME: C:\Program Files\Java\jdk1.8.0_20
   
 shallow_clone: true
 
