--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,5 @@
-install:
-  - cinst java.jdk
-
-#environment:
-#  JAVA_HOME: C:\Program Files\Java\jdk1.8.0_20
+environment:
+  JAVA_HOME: C:\Program Files\Java\jdk1.7.0
   
 shallow_clone: true
 
