Improve support for Spring TestContext Framework 4.0
- handle meta-annotations
- added spring-boot project/test sample

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 include "spock-core"
 include "spock-specs"
 include "spock-spring"
+include "spock-boot"
 include "spock-guice"
 include "spock-tapestry"
 include "spock-unitils"
