--- a/spock-spring/spring.gradle
+++ b/spock-spring/spring.gradle
@@ -3,9 +3,13 @@ apply from: script("publishMaven")
 displayName = "Spock Framework - Spring Module"
 
 description = "Spock's Spring Module makes it possible to use Spring's TestContext framework together with Spock. \
-Both Spring 2.5.x and 3.x are supported."
+Supports Spring 2.5.x, 3.x, and 4.x."
 
-def springVersion = "3.2.2.RELEASE"
+def springVersion = "2.5.6.SEC01"
+
+if (springVersion.startsWith("2.")) {
+  sourceSets.test.groovy.exclude "**/*ContextHierarchyExample.groovy"
+}
 
 dependencies {
   compile project(":spock-core")
@@ -18,6 +22,7 @@ dependencies {
   testCompile "org.springframework:spring-jdbc:$springVersion"
   testCompile "org.springframework:spring-tx:$springVersion"
   testCompile "javax.inject:javax.inject:1"
+
   testRuntime libs.h2database
   testRuntime libs.log4j
 }
