--- a/spock-spring/spring.gradle
+++ b/spock-spring/spring.gradle
@@ -5,7 +5,7 @@ displayName = "Spock Framework - Spring Module"
 description = "Spock's Spring Module makes it possible to use Spring's TestContext framework together with Spock. \
 Supports Spring 2.5.x, 3.x, and 4.x."
 
-def springVersion = "2.5.6.SEC01"
+def springVersion = "3.2.11.RELEASE"
 
 if (springVersion.startsWith("2.")) {
   sourceSets.test.groovy.exclude "**/*ContextHierarchyExample.groovy"
