Make build variant aware
- Introduced -Dvariant=2.0|2.3|2.4 build argument (defaults to 2.0)
- Made SpockReleaseInfo class read from variant specific
  SpockReleaseInfo.properties
- Added support for variant specific source directories (e.g. src/main2.0/java,
  src/test2.4/groovy)
- Bumped Gradle version, some Gradle plugin versions, and some dependency versions
- Removed some obsolete dependencies

--- a/spock-core/core.gradle
+++ b/spock-core/core.gradle
@@ -33,3 +33,8 @@ jar {
         'org.junit.runner;version="[4,7)"'
   }
 }
+
+processResources {
+  filter(org.apache.tools.ant.filters.ReplaceTokens, tokens:
+      [version: version.toString(), minGroovyVersion: minGroovyVersion, maxGroovyVersion: maxGroovyVersion])
+}
