--- a/build.gradle
+++ b/build.gradle
@@ -5,46 +5,59 @@ buildscript {
   }
 
   dependencies {
-    classpath "org.asciidoctor:asciidoctor-gradle-plugin:0.7.0"
+    classpath "org.asciidoctor:asciidoctor-gradle-plugin:1.5.2"
   }
 }
 
 apply plugin: "base"
-apply plugin: "asciidoctor"
+apply plugin: "org.asciidoctor.convert"
 
 description = "Spock Framework"
 
 ext {
+  variants = [2.0, 2.3, 2.4]
+  variant = System.getProperty("variant") as BigDecimal ?: variants.first()
+  if (variant == 2.0) {
+    groovyVersion = "2.0.8"
+    minGroovyVersion = "2.0.0"
+    maxGroovyVersion = "2.2.99"
+  } else if (variant == 2.3) {
+    groovyVersion = "2.3.10"
+    minGroovyVersion = "2.3.0"
+    maxGroovyVersion = "2.3.99"
+  } else if (variant == 2.4) {
+    groovyVersion = "2.4.1"
+    minGroovyVersion = "2.4.0"
+    maxGroovyVersion = "2.9.99"
+  } else {
+    throw new InvalidUserDataException("Unsupported variant: $variant")
+  }
+  baseVersion = "1.0"
+  snapshotVersion = true
+  fullVersion = "$baseVersion-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" : "")
+  variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : "")
+  javaVersion = System.getProperty("java.version")
   libs = [
-    ant: "org.apache.ant:ant:1.9.3", // use same version as Groovy 2.3
+    ant: "org.apache.ant:ant:1.9.4",
     asm: "org.ow2.asm:asm:5.0.3",
     cglib: "cglib:cglib-nodep:3.1",
-    easymock: "org.easymock:easymock:3.2",
-    groovy: "org.codehaus.groovy:groovy-all:2.3.9",
+    groovy: "org.codehaus.groovy:groovy-all:$groovyVersion",
     h2database: "com.h2database:h2:1.3.174",
-    jmock: "org.jmock:jmock:2.6.0",
-    jmock_junit4: "org.jmock:jmock-junit4:2.6.0",
-    junit: "junit:junit:4.11",
+    junit: "junit:junit:4.12",
     log4j: "log4j:log4j:1.2.17",
-    mockito: "org.mockito:mockito-all:1.9.5",
     objenesis: "org.objenesis:objenesis:2.1"
   ]
-  
-  baseVersion = "1.0"
-  groovyVersion = "2.3"
-  snapshotVersion = true
 }
 
 allprojects {  
   ext.displayName = null
   
   group = "org.spockframework"
-  version = "$baseVersion-groovy-$groovyVersion" + (snapshotVersion ? "-SNAPSHOT" : "")
-  ext.groovyLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : "")
-  
+  version = fullVersion
+
   apply from: script("common")
   
-  if (System.getProperty("java.version").startsWith("1.8")) {
+  if (javaVersion.startsWith("1.8")) {
     tasks.withType(Javadoc) {
       options.addStringOption('Xdoclint:none', '-quiet')
     }
@@ -58,6 +71,17 @@ subprojects {
   apply plugin: "signing"
 
   sourceCompatibility = 1.5
+
+  sourceSets.all { ss ->
+    for (v in variants.findAll { it <= variant } ) {
+      java {
+        srcDir "src/$ss.name$v/java"
+      }
+      groovy {
+        srcDir "src/$ss.name$v/groovy"
+      }
+    }
+  }
 
   repositories {
     mavenCentral()
@@ -117,7 +141,7 @@ if (gradle.startParameter.taskNames.contains("shippableCiBuild")) {
 }
 
 task javadoc(type: Javadoc) {
-  title "Spock Framework API Documentation ($groovyLessVersion)"
+  title "Spock Framework API Documentation ($variantLessVersion)"
   def docPath = snapshotVersion ? "latest" : baseVersion
   destinationDir file("build/javadoc/$docPath")
   source subprojects.javadoc.source
@@ -127,8 +151,8 @@ task javadoc(type: Javadoc) {
 configureJavadoc(javadoc)
 
 task groovydoc(type: Groovydoc) {
-  docTitle "Spock Framework API Documentation ($groovyLessVersion)"
-  windowTitle "Spock Framework API Documentation ($groovyLessVersion)"
+  docTitle "Spock Framework API Documentation ($variantLessVersion)"
+  windowTitle "Spock Framework API Documentation ($variantLessVersion)"
   def docPath = snapshotVersion ? "latest" : baseVersion
   destinationDir file("build/groovydoc/$docPath")
   source subprojects.groovydoc.source
@@ -159,9 +183,9 @@ def configureJavadoc(task) {
     include "spock/**"
     include "org/spockframework/mock/*"
     configure(options) {
-      links "http://download.oracle.com/javase/1.5.0/docs/api/"
-      links "http://groovy.codehaus.org/gapi/"
-      links "http://junit-team.github.io/junit/javadoc/4.11/"
+      links "http://docs.oracle.com/javase/6/docs/api/"
+      links "http://docs.groovy-lang.org/docs/groovy-$groovyVersion/html/gapi/"
+      links "http://junit.org/javadoc/latest/"
       links "http://hamcrest.org/JavaHamcrest/javadoc/1.3/"
     }
   }
