--- a/gradle/ide.gradle
+++ b/gradle/ide.gradle
@@ -3,9 +3,22 @@ allprojects {
   apply plugin: "eclipse"
 }
 
+def gitIgnore = file(".gitignore").readLines()
+def gitIgnoreDirs = gitIgnore*.trim().findAll { !it.startsWith("#") && it.endsWith("/") }
+def (topLevelDirs, allLevelDirs) = gitIgnoreDirs.split { it.startsWith("/") }
+topLevelDirs = topLevelDirs.collect { it.substring(1) }
+
 idea {
   project {
-    languageLevel "1.5"
+    languageLevel = "1.6"
+    vcs = "Git"
+    configure(modules) { module ->
+      def prj = module.project
+      excludeDirs = prj.files(allLevelDirs) as Set
+      if (prj == prj.rootProject) {
+        excludeDirs += allLevelDirs.collect { prj.file("buildSrc/$it") }
+        excludeDirs += (prj.files(topLevelDirs) as Set)
+      }
+    }
   }
 }
-
