--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,38 @@ allprojects {
       options.addStringOption('Xdoclint:none', '-quiet')
     }
   }
+
+  // variant aware tasks
+  for (v in variants) {
+    task "build$v"(type: GradleBuild) {
+      tasks = ["build"]
+      startParameter.systemPropertiesArgs = [variant: v]
+    }
+    task "test$v"(type: GradleBuild) {
+      tasks = ["test"]
+      startParameter.systemPropertiesArgs = [variant: v]
+    }
+    task "upload$v"(type: GradleBuild) {
+      tasks = ["uploadArchives"]
+      startParameter.systemPropertiesArgs = [variant: v]
+    }
+  }
+
+  task buildAll {
+    dependsOn tasks.withType(GradleBuild).matching { it.name.startsWith("build") }
+  }
+  task testAll {
+    dependsOn tasks.withType(GradleBuild).matching { it.name.startsWith("test") }
+  }
+  task uploadAll {
+    dependsOn tasks.withType(GradleBuild).matching { it.name.startsWith("upload") }
+  }
+}
+
+// only run the GradleBuild task(s) of the current project (don't recurse)
+def currentProject = allprojects.find { it.projectDir == gradle.startParameter.currentDir }
+gradle.startParameter.taskNames = gradle.startParameter.taskNames.collect {
+  it ==~ "(build(\\d|\\.)+)|(test(\\d|\\.)+)|(upload(\\d|\\.)+)|(buildAll)|(testAll)|(uploadAll)" ? "$currentProject.path:$it".replaceAll("::", ":") : it
 }
 
 apply from: script("ide")
@@ -120,6 +152,17 @@ subprojects {
   artifacts {
     archives sourcesJar, javadocJar
   }
+
+  tasks.withType(Test) {
+    reports {
+      junitXml {
+        destination = file("$destination/$variant")
+      }
+      html {
+        destination = file("$destination/$variant")
+      }
+    }
+  }
 }
 
 // https://app.shippable.com/projects/541614fdf82ab7ebd69cad63
@@ -167,11 +210,7 @@ configureGroovydoc(groovydoc)
 asciidoctor {
   sourceDir = file("docs")
   logDocuments = true
-  options = [
-    attributes: [
-      "source-highlighter": "coderay"
-    ]
-  ]
+  attributes "source-highlighter": "coderay"
 }
 
 File script(String name) {
