Configure Shippable build to build all variants on multiple JDKs
- Also use leaner Java image

--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,24 @@
+build_image: shippableimages/ubuntu1404_java
+
 language: java
+
 jdk:
- - oraclejdk7
-install:
- - true
+ - openjdk6
+ - openjdk7
+ - oraclejdk8
+
+ env:
+ - VARIANT=2.0
+ - VARIANT=2.3
+ - VARIANT=2.4
+
+ before_script:
+    - if [[ $SHIPPABLE_JDK_VERSION == "openjdk6" ]] ; then export JAVA_HOME="/usr/lib/jvm/java-6-openjdk-amd64"; export PATH="$PATH:/usr/lib/jvm/java-6-openjdk-amd64/bin"; export java_path="/usr/lib/jvm/java-6-openjdk-amd64/jre/bin/java"; fi
+    - if [[ $SHIPPABLE_JDK_VERSION == "openjdk7" ]] ; then export JAVA_HOME="/usr/lib/jvm/java-7-openjdk-amd64"; export PATH="$PATH:/usr/lib/jvm/java-7-openjdk-amd64/bin"; export java_path="/usr/lib/jvm/java-7-openjdk-amd64/jre/bin/java"; fi
+    - if [[ $SHIPPABLE_JDK_VERSION == "oraclejdk7" ]] ; then export JAVA_HOME="/usr/lib/jvm/java-7-oracle"; export PATH="$PATH:/usr/lib/jvm/java-7-oracle/bin"; export java_path="/usr/lib/jvm/java-7-oracle/jre/bin/java"; fi
+    - if [[ $SHIPPABLE_JDK_VERSION == "oraclejdk8" ]] ; then export JAVA_HOME="/usr/lib/jvm/java-8-oracle"; export PATH="$PATH:/usr/lib/jvm/java-8-oracle/bin"; export java_path="/usr/lib/jvm/java-8-oracle/jre/bin/java"; fi
+    - update-alternatives --set java $java_path
+    - java -version
+
 script:
  - ./gradlew shippableCiBuild --continue
