--- a/gradle/publishMaven.gradle
+++ b/gradle/publishMaven.gradle
@@ -52,19 +52,11 @@ uploadArchives {
   deployers << repositories.mavenDeployer {
     if (snapshotVersion) {
       snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
-        if (project.hasProperty("sonatypeOssUsername")) {
-          authentication(userName: sonatypeOssUsername, password: sonatypeOssPassword)
-        }
+        authentication(userName: "pniederw", password: System.getenv("SONATYPE_OSS_PASSWORD"))
       }
-    } else if (project.hasProperty("bintray")) {
-      repository(url: "https://api.bintray.com/maven/spockframework/spockframework/spock/") {
-        authentication(userName: bintrayUsername, password: bintrayApiKey)
-      }     
     } else {
       repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-        if (project.hasProperty("sonatypeOssUsername")) {
-          authentication(userName: sonatypeOssUsername, password: sonatypeOssPassword)
-        }
+        authentication(userName: "pniederw", password: System.getenv("SONATYPE_OSS_PASSWORD"))
       }
     }
   }
