--- a/build.gradle
+++ b/build.gradle
@@ -174,7 +174,7 @@ subprojects {
 }
 
 if (gradle.startParameter.taskNames == ["shippableCiBuild"]) {
-  gradle.startParameter.taskNames = ["build"]
+  gradle.startParameter.taskNames = ["clean", "build"]
   if (javaVersion == javaVersions.min()) {
     gradle.startParameter.taskNames += ["uploadArchives"]
   }
