Speed up Travis builds

--- a/build.gradle
+++ b/build.gradle
@@ -173,8 +173,28 @@ subprojects {
   }
 }
 
+if (gradle.startParameter.taskNames == ["travisCiBuild"]) {
+  gradle.startParameter.taskNames = ["build"]
+  if (javaVersion == javaVersions.min()) {
+    gradle.startParameter.taskNames += ["uploadArchives"]
+  }
+  if (javaVersion == javaVersions.max()) {
+    if (variant == variants.max()) {
+      gradle.startParameter.taskNames += ["publishJavadoc", "publishDocs"]
+      if (!snapshotVersion) {
+        gradle.startParameter.taskNames += ["tagRelease"]
+      }
+    }
+  }
+  subprojects {
+    tasks.withType(Test) {
+      maxParallelForks = 2
+    }
+  }
+}
+
 if (gradle.startParameter.taskNames == ["shippableCiBuild"]) {
-  gradle.startParameter.taskNames = ["clean", "build"]
+  gradle.startParameter.taskNames = ["clean", "build"] // use clean because whole minion is cached
   if (javaVersion == javaVersions.min()) {
     gradle.startParameter.taskNames += ["uploadArchives"]
   }
