--- a/spock-specs/specs.gradle
+++ b/spock-specs/specs.gradle
@@ -9,11 +9,18 @@ configurations {
   junit
 }
 
+// for "com.github.cglib:cglib.cglib-nodep:e10bc3dda2"
+repositories {
+  maven {
+    url "https://jitpack.io"
+  }
+}
+
 dependencies {
   testCompile project(":spock-core")
 
   testRuntime libs.asm
-  testRuntime libs.cglib
+  testRuntime javaVersion >= 1.8 ? "com.github.cglib:cglib.cglib-nodep:e10bc3dda2" : libs.cglib
   testRuntime libs.objenesis
   testRuntime libs.h2database
 
