--- a/spock-tapestry/tapestry.gradle
+++ b/spock-tapestry/tapestry.gradle
@@ -10,8 +10,7 @@ repositories {
   maven { url "http://repository.jboss.com/maven2" }
 }
 
-// 5.3.x seems to require Java 1.6 (evidence: org.apache.tapestry5.ioc.internal.util.InternalUtils makes direct use of @PostConstruct)
-def tapestryVersion = System.getProperty("java.version").startsWith("1.5") ? "5.2.6" : "5.3.6"
+def tapestryVersion = javaVersion >= 1.8 ? "5.4-beta-26" : "5.2.6"
 
 dependencies {
   compile project(":spock-core")
