Limit Travis build matrix to 5 builds
- Don't waste Travis resources
- Travis currently runs up to 5 builds concurrently, so limiting ourselves to 5 builds will give faster feedback

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,17 @@ env:
 
 matrix:
   exclude:
+    # Groovy 2.0 doesn't support Java 8
     - jdk: oraclejdk8
       env: VARIANT=2.0
+    # Reduce Travis workload (currently 5 concurrent builds are allowed)
+    # See travisCiBuild task for mandatory combinations
     - jdk: oraclejdk8
       env: VARIANT=2.3
+    - jdk: openjdk7
+      env: VARIANT=2.0
+    - jdk: openjdk7
+      env: VARIANT=2.4
 
 install: true
 
